# aitest

./: .gitignore  README.md  config.yaml  docker-compose.yml  pyproject.toml
.monkeycode/specs/business-intelligence-system/: design.md  requirements.md  tasklist.md
docs/superpowers/plans/: 2026-03-20-task-execution-stability.md
src/bis/: main.py
src/bis/api/: intelligence.py  proxies.py  rules.py  sources.py  tasks.py  user_agents.py
src/bis/core/: config.py  database.py  logging.py  task_runner.py
src/bis/models/: __init__.py  models.py  schemas.py
src/bis/repositories/: base.py  repositories.py
src/bis/services/: intelligence_service.py  proxy_service.py  rule_service.py  scraper_service.py  source_service.py  task_service.py  ua_service.py
src/bis/templates/: index.html
tests/: test_task_execution.py
